// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<affix> demo: > render [basic] correctly 1`] = `
<div>
  <!--v-if-->
  <div class=""><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Affix Top
    </button></div>
</div>
`;

exports[`<affix> demo: > render [bottom] correctly 1`] = `
<div>
  <!--v-if-->
  <div class=""><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->120px to affix bottom
    </button></div>
</div>
`;

exports[`<affix> demo: > render [container] correctly 1`] = `
<div class="sd:h-50 sd:overflow-auto">
  <div class="sd:h-100 sd:overflow-hidden sd:bg-[#ccc]">
    <div class="sd:m-10">
      <!--v-if-->
      <div class=""><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
          <!--v-if-->Affix in scrolling container
        </button></div>
    </div>
  </div>
</div>
`;

exports[`<affix> demo: > render [fix-change] correctly 1`] = `
<div>
  <!--v-if-->
  <div class=""><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->80px to affix bottom
    </button></div>
</div>
`;

exports[`<affix> demo: > render [top] correctly 1`] = `
<div>
  <!--v-if-->
  <div class=""><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->80px to affix top
    </button></div>
</div>
`;
